RESOLVED FIXED 229940
webgl/2.0.y/conformance/extensions/webgl-compressed-texture-etc.html fails on Metal
https://bugs.webkit.org/show_bug.cgi?id=229940
Summary webgl/2.0.y/conformance/extensions/webgl-compressed-texture-etc.html fails on...
Kimmo Kinnunen
Reported 2021-09-06 02:01:54 PDT
webgl/2.0.y/conformance/extensions/webgl-compressed-texture-etc.html fails on Intel Metal [ 1: PASS ] context exists [ 2: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_R11_EAC with extension disabled. [ 3: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_SIGNED_R11_EAC with extension disabled. [ 4: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_RG11_EAC with extension disabled. [ 5: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_SIGNED_RG11_EAC with extension disabled. [ 6: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_RGB8_ETC2 with extension disabled. [ 7: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_SRGB8_ETC2 with extension disabled. [ 8: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_RGB8_PUNCHTHROUGH_ALPHA1_ETC2 with extension disabled. [ 9: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_SRGB8_PUNCHTHROUGH_ALPHA1_ETC2 with extension disabled. [ 10: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_RGBA8_ETC2_EAC with extension disabled. [ 11: FAIL ] getError expected: INVALID_ENUM. Was NO_ERROR : Trying to use format COMPRESSED_SRGB8_ALPHA8_ETC2_EAC with extension disabled. [ 12: PASS ] WEBGL_compressed_texture_etc not listed as supported and getExtension failed -- this is legal [ 13: PASS ] getError was one of: INVALID_ENUM or INVALID_OPERATION : after evaluating: gl.compressedTexImage2D(gl.TEXTURE_2D, 0, validFormats.COMPRESSED_R11_EAC, 4, 4, 0, 0, null) [ 14: PASS ] getError was one of: INVALID_ENUM or INVALID_OPERATION : after evaluating: gl.compressedTexSubImage2D(gl.TEXTURE_2D, 0, 0, 0, 0, 0, validFormats.COMPRESSED_R11_EAC, 0, null) [ 15: PASS ] getError was one of: INVALID_ENUM or INVALID_OPERATION : after evaluating: gl.compressedTexImage3D(gl.TEXTURE_2D_ARRAY, 0, validFormats.COMPRESSED_R11_EAC, 4, 4, 4, 0, 0, null) [ 16: PASS ] getError was one of: INVALID_ENUM or INVALID_OPERATION : after evaluating: gl.compressedTexSubImage3D(gl.TEXTURE_2D_ARRAY, 0, 0, 0, 0, 0, 0, 0, validFormats.COMPRESSED_R11_EAC, 0, null) [ 17: PASS ] successfullyParsed is true [ FAIL ] 10 failures reported
Attachments
Patch (9.32 KB, patch)
2021-09-08 06:02 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-09-08 06:02:01 PDT
EWS
Comment 2 2021-09-08 11:36:30 PDT
Committed r282160 (241452@main): <https://commits.webkit.org/241452@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437622 [details].
Radar WebKit Bug Importer
Comment 3 2021-09-08 11:37:35 PDT
Note You need to log in before you can comment on or make changes to this bug.